--- a/rungame.ipynb
+++ b/rungame.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPU6HOFVSmh7NlJ2JmGO3C",
+      "authorship_tag": "ABX9TyPpg9UXvNgXpBqQn1zGOpiF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,70 +28,138 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "TwbwfmlImqZn"
+        "id": "TwbwfmlImqZn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4efaf4ae-2c8c-4e6b-ef24-24de73f0cab8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [1, 1]\n",
+            "Their hand(s): [1, 1]\n",
+            "Your Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 0\n",
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [2, 1]\n",
+            "Their hand(s): [1, 1]\n",
+            "Your Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): \n",
+            "Their Hand (0 or 1): 0\n",
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [3, 1]\n",
+            "Their hand(s): [2, 1]\n",
+            "Your Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 0\n",
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [0, 1]\n",
+            "Their hand(s): [3, 1]\n",
+            "Your Hand (0 or 1): 1\n",
+            "Their Hand (0 or 1): 0\n",
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [4, 1]\n",
+            "Their hand(s): [0, 1]\n",
+            "Your Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 10ì\n",
+            "Their Hand (0 or 1): 1\n"
+          ]
+        }
+      ],
       "source": [
         "import abc\n",
         "\n",
         "class Player(abc.ABC):\n",
+        "  # contains variables \"hands\" and \"handmax\", that can be changed with changehands(), and whose values can be accessed with currstate()\n",
         "  def __init__(self, handnum):\n",
-        "    self.hands = [handnum-1, handnum-1]\n",
+        "    self.hands = [1, 1]\n",
         "    self.handmax = handnum\n",
         "\n",
         "  def changehands(self, val, hand):\n",
-        "    newhands = (self.hands[hand]+val)% self.handmax\n",
-        "    self.hands = sorted(newhands)\n",
+        "    self.hands[hand] = (self.hands[hand]+val)% self.handmax\n",
         "\n",
         "  def currstate(self):\n",
         "    return self.hands\n",
         "\n",
         "  @abc.abstractclassmethod\n",
         "  def nextmove(self, opponent: list)->list:\n",
+        "    #the point of this is to get which of your hands and which of theirs is changed\n",
         "    pass\n",
         "\n",
         "\n",
         "class HumanPlayer(Player):\n",
-        "\n",
         "  def nextmove(self, opponent):\n",
-        "    print(\"Next Move:\")\n",
-        "    if self.hands[1]!=0:\n",
-        "      own = -1\n",
-        "      while own not in [0, 1]:\n",
-        "        own = int(input(\"Your Hand (0 or 1)\"))\n",
+        "    print(\"\\n\\nNext Move:\")\n",
+        "    print(f\"Your hand(s): {self.hands}\")\n",
+        "    print(f\"Their hand(s): {opponent}\")\n",
         "\n",
-        "    else:\n",
-        "      own = 0\n",
-        "    if opponent[1]!=0:\n",
-        "      opp = -1\n",
-        "      while opp not in [0, 1]:\n",
-        "        opp = int(input(\"Their Hand (0 or 1)\"))\n",
-        "    else:\n",
-        "      opp = 0\n",
-        "    return own, opp\n",
+        "    own = None\n",
+        "    while own not in [\"0\", \"1\"]:\n",
+        "      own = input(\"Your Hand (0 or 1): \")\n",
+        "\n",
+        "    opp = None\n",
+        "    while opp not in [\"0\", \"1\"]:\n",
+        "      opp = input(\"Their Hand (0 or 1): \")\n",
+        "\n",
+        "    return int(own), int(opp)\n",
         "\n",
         "class NNPlayer(Player):\n",
-        "  def nextmove(move):\n",
-        "    return move\n",
+        "  def nextmove(self, opponent):\n",
+        "    own, opp = 1, 1\n",
+        "    return own, opp\n",
         "\n",
-        "def handsgame(handnum, player_1 = \"h\", player_2 = \"h\", *print=False):\n",
+        "def handsgame(handnum, player_1 = \"h\", player_2 = \"h\", print=False):\n",
         "  #initialise players\n",
         "  if player_1 == \"h\":\n",
-        "    p1 = HumanPlayer(handnum)\n",
+        "    p0 = HumanPlayer(handnum)\n",
         "  else:\n",
-        "    p1 = NNPlayer(handnum)\n",
+        "    p0 = NNPlayer(handnum)\n",
         "  if player_2 == \"h\":\n",
-        "    p2=HumanPlayer(handnum)\n",
+        "    p1=HumanPlayer(handnum)\n",
         "  else:\n",
-        "    p2=NNPlayer(handnum)\n",
-        "\n",
-        "\n",
-        "\n",
+        "    p1=NNPlayer(handnum)\n",
         "\n",
         "  #Print initial\n",
-        "  if player_1 != \"h\" and player_2 != \"h\":\n",
+        "  count = 0\n",
+        "  while count<20:\n",
+        "    if p0.currstate()[0] or p0.currstate()[1]:\n",
+        "      own, opp = p0.nextmove(p1.currstate())\n",
+        "      p1.changehands(p0.currstate()[own], opp)\n",
+        "    else:\n",
+        "      return 1\n",
+        "\n",
+        "    if p1.currstate()[0] or p1.currstate()[1]:\n",
+        "      own, opp = p1.nextmove(p0.currstate())\n",
+        "      p0.changehands(p1.currstate()[own], opp)\n",
+        "    else:\n",
+        "      return 0\n",
+        "\n",
+        "    count+=1\n",
+        "  return None\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  handsgame(5)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ]
@@ -106,7 +174,7 @@
         "id": "awE6duBKsCyT",
         "outputId": "68334f19-0d21-436e-be27-5f9d00880c12"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
