Fixed so that it doesn't accept zero hands (all it does is ask again for the hand number. No message or anything else)

--- a/rungame.ipynb
+++ b/rungame.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpg9UXvNgXpBqQn1zGOpiF",
+      "authorship_tag": "ABX9TyObTYcXAUP8VUGwsCnjidiw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 45,
       "metadata": {
         "id": "TwbwfmlImqZn",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4efaf4ae-2c8c-4e6b-ef24-24de73f0cab8"
+        "outputId": "c85af980-c986-44b5-e86b-efa9eff65a86"
       },
       "outputs": [
         {
@@ -54,7 +54,6 @@
             "Your hand(s): [2, 1]\n",
             "Their hand(s): [1, 1]\n",
             "Your Hand (0 or 1): 0\n",
-            "Their Hand (0 or 1): \n",
             "Their Hand (0 or 1): 0\n",
             "\n",
             "\n",
@@ -68,15 +67,36 @@
             "Next Move:\n",
             "Your hand(s): [0, 1]\n",
             "Their hand(s): [3, 1]\n",
+            "Your Hand (0 or 1): 0\n",
+            "Your Hand (0 or 1): 0\n",
             "Your Hand (0 or 1): 1\n",
-            "Their Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 1\n",
             "\n",
             "\n",
             "Next Move:\n",
-            "Your hand(s): [4, 1]\n",
+            "Your hand(s): [3, 2]\n",
             "Their hand(s): [0, 1]\n",
             "Your Hand (0 or 1): 0\n",
-            "Their Hand (0 or 1): 10ì\n",
+            "Their Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 0\n",
+            "Their Hand (0 or 1): 1\n",
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [0, 4]\n",
+            "Their hand(s): [3, 2]\n",
+            "Your Hand (0 or 1): 1\n",
+            "Their Hand (0 or 1): \n",
+            "Their Hand (0 or 1): 1\n",
+            "\n",
+            "\n",
+            "Next Move:\n",
+            "Your hand(s): [3, 1]\n",
+            "Their hand(s): [0, 4]\n",
+            "Your Hand (0 or 1): 1\n",
             "Their Hand (0 or 1): 1\n"
           ]
         }
@@ -108,12 +128,15 @@
         "    print(f\"Your hand(s): {self.hands}\")\n",
         "    print(f\"Their hand(s): {opponent}\")\n",
         "\n",
+        "    live_hands = [[\"0\", \"1\"][i] for i in range(2) if self.hands[i]]\n",
         "    own = None\n",
-        "    while own not in [\"0\", \"1\"]:\n",
+        "    while own not in live_hands:\n",
         "      own = input(\"Your Hand (0 or 1): \")\n",
         "\n",
+        "\n",
+        "    live_hands = [[\"0\", \"1\"][i] for i in range(2) if opponent1[i]]\n",
         "    opp = None\n",
-        "    while opp not in [\"0\", \"1\"]:\n",
+        "    while opp not in live_hands:\n",
         "      opp = input(\"Their Hand (0 or 1): \")\n",
         "\n",
         "    return int(own), int(opp)\n",
